--- a/config/database.yml
+++ b/config/database.yml
@@ -12,11 +12,11 @@
 default: &default
   adapter: mysql2
   encoding: utf8
-  host: 192.168.2.31
+  host: localhost
   port: 3306
   pool: 15
-  username: hnhzf
-  password: Hzf2018%&
+  username: root
+  password: Hzf2018!@
   socket: /var/lib/mysql/mysql.sock
 
 development:
